--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,7 @@ body, input, button {
     margin-top: 50px;
     border-radius: 4px;
     padding: 30px;
+    box-shadow: 0px 5px 10px 5px rgba(77, 76, 74, 0.5);
 }
 
 .content > p {
